--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 21 17:21:30 CST 2022
-sdk.dir=C\:\\Users\\13753\\AppData\\Local\\Android\\Sdk
+#Tue Oct 25 14:03:37 CST 2022
+sdk.dir=D\:\\AndroidStudio\\SDK
