--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 26 18:53:26 CST 2022
-sdk.dir=C\:\\Users\\13753\\AppData\\Local\\Android\\Sdk
+#Thu Oct 27 16:04:50 CST 2022
+sdk.dir=D\:\\AndroidStudio\\SDK
