--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 27 16:04:50 CST 2022
-sdk.dir=D\:\\AndroidStudio\\SDK
+#Sun Oct 30 11:49:35 CST 2022
+sdk.dir=C\:\\Users\\13753\\AppData\\Local\\Android\\Sdk
